9-superset-with-domain-ingress-tls/kubernetes/ingress.yml
# Will create Ingress in GKE Servicess > Ingress tab
# Will create static external/public IP in GKE if non specified in annotations
# Will create an external Application Load Balancer in GKE (give it a few mins)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: superset
  name: my-ingress
  annotations:
    networking.gke.io/managed-certificates: my-managed-certificates
    networking.gke.io/v1beta1.FrontendConfig: ingress-frontend-config
    # kubernetes.io/ingress.global-static-ip-name: "ingress-test-ip"
spec:
  rules:
    - host: superset.testmosaic.com
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: superset
                port:
                  name: http
